objects/LLC_BI__Dimension_Definition__c.object
<CustomObject>
    <description>This object defines the dimensions available with each policy type and specifies where the dimension pulls data from in the nCino BOS.</description>
    <fields>
        <fullName>LLC_BI__Context_Object__c</fullName>
        <description>Administrators populate this required text field to set the context object for all dimensions associated to this dimension definition. By default, the value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the context object.</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Excluded_Dimension_Help_Text__c</fullName>
        <description>Administrators populate this required text field with information about what types of values the matrix analyst should enter into this dimension; for example, the desired unit type. Shows as a subheader in the Matrix Builder for this dimension.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter information to help the matrix analyst populate values into this dimension; for example, the desired unit type.</inlineHelpText>
        <label>Excluded Dimension Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Field_Path__c</fullName>
        <description>Administrators populate this required text field to set the source field path for all queried dimensions associated to this dimension definition. By default, the value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For queried dimensions, enter the source field path for value extraction.</inlineHelpText>
        <label>Source Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this required lookup field to set the associated policy type. By default, the value is blank.</description>
        <inlineHelpText>Select a policy type.</inlineHelpText>
        <label>Policy Type</label>
        <referenceTo>LLC_BI__Policy_Type__c</referenceTo>
        <relationshipLabel>Dimension Definitions</relationshipLabel>
        <relationshipName>Dimension_Definitions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_Field_Path__c</fullName>
        <description>Administrators populate this optional text field on non-queried dimension definitions to set the target field path for value mapping.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For non-queried dimensions, enter the target field path for value mapping.</inlineHelpText>
        <label>Target Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>Administrators populate this required picklist field to set the dimension type for all dimensions associated to this dimension definition. By default, the value is blank.</description>
        <inlineHelpText>Select a dimension type.</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continuous: Numeric</fullName>
                </value>
                <value>
                    <fullName>Discrete: Values/Groupable</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>Routing</fullName>
                </value>
                <value>
                    <fullName>Result Column</fullName>
                </value>
                <value>
                    <fullName>Non-Lookup</fullName>
                    <isActive>false</isActive>
                    <label>Non-Lookup</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dimension Definition</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>